HV-2204 Test against JDK 27